fix: Stop tools getting cut off when in short mode

--- a/styles.css
+++ b/styles.css
@@ -468,10 +468,6 @@
     margin-bottom: -25px;
 }
 
-.excalidraw-canvas-wrapper .small-canvas section:hover {
-    max-width: 250px;
-}
-
 .excalidraw-canvas-wrapper .small-canvas section .Stack_horizontal .Stack_horizontal {
   flex-direction: row;
 }
